force-app/main/default/objects/ContactPremiseRelation__c/ContactPremiseRelation__c.object-meta.xml
<CustomObject>
    <label>Contact Premise Relation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ContactPremise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Premise Relation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>