force-app/main/default/objects/ContactPremiseRelation__c/fields/ARTL_BCP_DCP_Search_String__c.field-meta.xml
<CustomField>
    <fullName>ARTL_BCP_DCP_Search_String__c</fullName>
    <formula>BCP_DCP_Number__c + &apos; - &apos; + Contact__r.FirstName + &apos; - &apos; + Contact__r.LastName + &apos; - &apos; + Contact__r.Phone + &apos; - &apos; +
    Contact__r.Email + &apos; - &apos; + Premises__r.vlocity_cmt__StreetAddress__c + &apos; - &apos; + Premises__r.vlocity_cmt__City__c +
    &apos; - &apos; + Premises__r.vlocity_cmt__State__c + &apos; - &apos; + Premises__r.vlocity_cmt__PostalCode__c + &apos; - &apos; + GST__r.Name + &apos; - &apos; +
    TEXT(ARTL_Standard_Reason__c)</formula>
    <label>BCP/DCP Search String</label>
    <type>Text</type>
</CustomField>