force-app/main/default/objects/ContactPremiseRelation__c/fields/ARTL_GST_Applicable__c.field-meta.xml
<CustomField>
    <fullName>ARTL_GST_Applicable__c</fullName>
    <label>GST Applicable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>