force-app/main/default/objects/ContactPremiseRelation__c/fields/ARTL_NBA_Account__c.field-meta.xml
<CustomField>
    <fullName>ARTL_NBA_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NBA Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Premise Relation</relationshipLabel>
    <relationshipName>Contact_Premise_Relation</relationshipName>
    <type>Lookup</type>
</CustomField>