force-app/main/default/objects/ContactPremiseRelation__c/fields/ARTL_Standard_Reason__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Standard_Reason__c</fullName>
    <label>Standard Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ARTL_GST_Applicable__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEZ</fullName>
            </value>
            <value>
                <fullName>UIN</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Non-SEZ</fullName>
            </value>
            <value>
                <fullName>Applied For</fullName>
            </value>
            <value>
                <fullName>SEZ with taxes</fullName>
            </value>
            <value>
                <fullName>Zero Rated Supply- FTWZ</fullName>
            </value>
            <value>
                <fullName>Zero Rated Supply- Export</fullName>
            </value>
            <value>
                <fullName>Non Taxable as transactions within same Company</fullName>
            </value>
            <value>
                <fullName>Airtel- Foreign Legal Entity</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Exempt-Trust/Entities 12AA</fullName>
            </value>
            <value>
                <fullName>Zero Rated Supply- SEZ</fullName>
            </value>
            <value>
                <fullName>J&amp;K delivery - Out of GST Preview</fullName>
            </value>
            <value>
                <fullName>Exempt Supply - Trust/Entities 12AA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>