force-app/main/default/objects/ContactPremiseRelation__c/fields/Auto_CPR_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_CPR_Number__c</fullName>
    <displayFormat>9{00000000}</displayFormat>
    <label>Auto CPR Number</label>
    <type>AutoNumber</type>
</CustomField>