force-app/main/default/objects/ContactPremiseRelation__c/fields/BCP__c.field-meta.xml
<CustomField>
    <fullName>BCP__c</fullName>
    <description>Generate an unique BCP ID</description>
    <displayFormat>BCP-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>BCP#</label>
    <type>AutoNumber</type>
</CustomField>