force-app/main/default/objects/ContactPremiseRelation__c/fields/BCP_DCP_Number__c.field-meta.xml
<CustomField>
    <fullName>BCP_DCP_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BCP/DCP Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>