force-app/main/default/objects/ContactPremiseRelation__c/fields/DCP__c.field-meta.xml
<CustomField>
    <fullName>DCP__c</fullName>
    <description>Generate an unique DCP ID</description>
    <displayFormat>DCP-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>DCP#</label>
    <type>AutoNumber</type>
</CustomField>