force-app/main/default/objects/ContactPremiseRelation__c/fields/Premises__c.field-meta.xml
<CustomField>
    <fullName>Premises__c</fullName>
    <label>Premises</label>
    <referenceTo>vlocity_cmt__Premises__c</referenceTo>
    <relationshipLabel>Contact Premise Relation</relationshipLabel>
    <relationshipName>Contact_Premise_Relation</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>