force-app/main/default/objects/ContactPremiseRelation__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BCP</fullName>
            </value>
            <value>
                <fullName>DCP</fullName>
            </value>
            <value>
                <fullName>BCP &amp; DCP</fullName>
                <isActive>false</isActive>
                <label>BCP &amp; DCP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>