force-app/main/default/objects/ContactPremiseRelation__c/fields/Search_String__c.field-meta.xml
<CustomField>
    <fullName>Search_String__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Search String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>