force-app/main/default/objects/ContactPremiseRelation__c/fields/Siebel_Id__c.field-meta.xml
<CustomField>
    <fullName>Siebel_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Siebel Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>