force-app/main/default/objects/ContactPremiseRelation__c/validationRules/ARTL_GST_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_GST_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND( 
        ISPICKVAL(ARTL_GST_Applicable__c, &apos;Yes&apos;), ISPICKVAL(ARTL_Standard_Reason__c, &apos;SEZ&apos; ), ISBLANK(GST__c)
        ),
    AND (
        ISPICKVAL( ARTL_GST_Applicable__c, &apos;Yes&apos;), ISPICKVAL(ARTL_Standard_Reason__c, &apos;UIN&apos;), ISBLANK(GST__c)
    ),
    AND( 
         ISPICKVAL(ARTL_GST_Applicable__c, &apos;Yes&apos;), ISPICKVAL(ARTL_Standard_Reason__c, &apos;Non-SEZ&apos; ), ISBLANK(GST__c)
        ),
    AND (
        ISPICKVAL( ARTL_GST_Applicable__c, &apos;Yes&apos;), ISPICKVAL(ARTL_Standard_Reason__c, &apos;SEZ with taxes&apos;), ISBLANK(GST__c)
    ),
    AND( 
        ISPICKVAL(ARTL_GST_Applicable__c, &apos;Yes&apos;), ISPICKVAL(ARTL_Standard_Reason__c, &apos;Zero Rated Supply- FTWZ&apos; ), ISBLANK(GST__c)
        ),
    AND (
        ISPICKVAL( ARTL_GST_Applicable__c, &apos;No&apos;), ISPICKVAL(ARTL_Standard_Reason__c, &apos;Non Taxable as transactions within same Company&apos;), ISBLANK(GST__c)
    )
)</errorConditionFormula>
    <errorMessage>GST should be present for following combination of &apos;GST Applicable&apos; and &apos;Standard Reason&apos;.</errorMessage>
</ValidationRule>