force-app/main/default/objects/ContactPremiseRelation__c/validationRules/ARTL_GSTApplicable_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_GSTApplicable_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(ARTL_GST_Applicable__c),
OR(
    AND( 
        ISPICKVAL( PRIORVALUE(ARTL_GST_Applicable__c), &apos;Yes&apos;), 
        ISPICKVAL(ARTL_GST_Applicable__c, &apos;No&apos;)
        ),
    AND (
        ISPICKVAL( PRIORVALUE(ARTL_GST_Applicable__c), &apos;No&apos;), 
        ISPICKVAL(ARTL_GST_Applicable__c, &apos;Yes&apos;)
    )
  )
)</errorConditionFormula>
    <errorDisplayField>ARTL_GST_Applicable__c</errorDisplayField>
    <errorMessage>GST Applicable cannot be changed from (Yes to No) or (No to Yes).</errorMessage>
</ValidationRule>