force-app/main/default/objects/ContactPremiseRelation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Premises__c</columns>
    <columns>Contact__c</columns>
    <columns>Role__c</columns>
    <columns>GST__c</columns>
    <columns>DCP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>