force-app/main/default/objects/ContactPremiseRelation__c/listViews/ARTL_My_Contact_Premise_Relation.listView-meta.xml
<ListView>
    <fullName>ARTL_My_Contact_Premise_Relation</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>My Contact Premise Relation</label>
</ListView>